@@ -356,9 +356,11 @@ namespace Chummer
         {
             if (e.Action != NotifyCollectionChangedAction.Move)
             {
-                _intCachedNegativeQualities = int.MinValue;
-                _intCachedNegativeQualityLimitKarma = int.MinValue;
-                _intCachedPositiveQualities = int.MinValue;
+                OnMultiplePropertyChanged(nameof(NegativeQualityKarma),
+                    nameof(NegativeQualityLimitKarma),
+                    nameof(PositiveQualityKarma),
+                    nameof(PositiveQualityKarmaTotal),
+                    nameof(EnemyKarma));
             }
         }
         private void PowersOnBeforeRemove(object sender, RemovingOldEventArgs e)
@@ -15544,10 +15546,19 @@ namespace Chummer
                             new DependencyGraphNode<string, Character>(nameof(EnemyKarma)),
                             new DependencyGraphNode<string, Character>(nameof(Contacts)),
                             new DependencyGraphNode<string, Character>(nameof(Qualities))
+                        ),
+                        new DependencyGraphNode<string, Character>(nameof(NegativeQualityLimitKarma),
+                            new DependencyGraphNode<string, Character>(nameof(EnemyKarma)),
+                            new DependencyGraphNode<string, Character>(nameof(Contacts)),
+                            new DependencyGraphNode<string, Character>(nameof(Qualities))
                         )
                     ),
                     new DependencyGraphNode<string, Character>(nameof(DisplayPositiveQualityKarma),
                         new DependencyGraphNode<string, Character>(nameof(PositiveQualityKarma),
+                            new DependencyGraphNode<string, Character>(nameof(Contacts)),
+                            new DependencyGraphNode<string, Character>(nameof(Qualities))
+                        ),
+                        new DependencyGraphNode<string, Character>(nameof(PositiveQualityKarmaTotal),
                             new DependencyGraphNode<string, Character>(nameof(Contacts)),
                             new DependencyGraphNode<string, Character>(nameof(Qualities))
                         )
@@ -15725,7 +15736,7 @@ namespace Chummer
                 RefreshWoundPenalties();
             }
 
-            if (lstNamesOfChangedProperties.Contains(nameof(Contacts)))
+            if (lstNamesOfChangedProperties.Contains(nameof(EnemyKarma)))
             {
                 _intCachedEnemyKarma = int.MinValue;
             }
@@ -18109,7 +18120,7 @@ namespace Chummer
                 if (_intCachedEnemyKarma == int.MinValue)
                 {
                     _intCachedEnemyKarma = Contacts
-                        .Where(x => x.EntityType == ContactType.Enemy && x.IsGroup && !x.Free)
+                        .Where(x => x.EntityType == ContactType.Enemy && !x.Free)
                         .Sum(x => (x.Connection + x.Loyalty) * Options.KarmaEnemy);
                 }
 
